# wab

./: .gitignore  .pdm-python  Dockerfile  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: azure-static-web-apps-white-flower-0a49d6710.yml
consumer/: mongodb.py  pyproject.toml
consumer/src/: main.py
producent/: pyproject.toml
src/: main.py  schema.py
src/mock_data/: MoviesMock.py
src/model/: Movie.py
