[project]
name = "wab-Hello-world"
version = "1.0.0"
description = "simple hello world service"
authors = [
    {name = "xmalak", email = "xmalak@mendelu.cz"},
]
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn[standard]>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
[tool.pdm.scripts]
dev = "uvicorn main:app --reload"
test = "pytest"